Fixed spacing in footer for INDEX.HTML.

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -49,9 +49,8 @@ h2 {
 	margin-top: 0;
 	background-color: #000;
 	padding: 0;
-	/*height: 250px;*/
 	width: 100%;
-	/*color: #fff;*/
+	margin-bottom: 100px;
 }
 
 .author-photo {
@@ -99,7 +98,6 @@ h2 {
 	width: 100%;
 	margin: 0 auto;
 	text-align: center;
-	/*padding-top: 150px;*/
 	padding-bottom: 80px;
 }
 
@@ -126,7 +124,6 @@ a:active {
 	border: 3px solid #000;
 	padding: 5px 50px;
 	font-size: 100%;
-	/*font-weight: 400;*/
 	color: #000;
 }
 
@@ -134,9 +131,7 @@ a:active {
 .btn:active {
 	cursor: pointer;
 	color: #a495a2;
-	/*background-color: #000;*/
 	border: 3px solid #a495a2;
 	transition: color 0.2s;
 	transition: border 0.05s;
-	/*transition: background-color 0.2s;*/
 }
